--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ top:7% !important}
 .container1 {position: absolute;
     left: 80% !important;
 top:7% !important}
+    .img1{width:100% !important;
 }
 h4{ font-family: 'Inter';
     color: black;
