--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ top:7% !important}
     left: 80% !important;
 top:7% !important}
     .img1{width:100% !important;
-          input {width:100% !important;
+   #email {width:100% !important;
     button  {width:100% !important;
 }
 h4{ font-family: 'Inter';
