--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,10 @@ top:7% !important}
     left: 80% !important;
 top:7% !important}
     .img1{width:100% !important;
-   #email {width:100% !important;
-    button  {width:100% !important;
+   #email {width:100% !important};
+#password 
+    button  {width:100% !important
+             ;}
 }
 h4{ font-family: 'Inter';
     color: black;
