--- a/css/style.css
+++ b/css/style.css
@@ -25,9 +25,9 @@ top:7% !important}
 .container1 {position: absolute;
     left: 80% !important;
 top:7% !important}
-    .img1{width:100% !important;
-   #email {width:100% !important};
-#password 
+    .img1{width:100% !important;}
+   #email {width:100% !important;}
+#password {width:100% !important;}
     button  {width:100% !important
              ;}
 }
